--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,7 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  opacity: 0;
 }
 
 .header__logo {
@@ -69,6 +70,7 @@ li {
 .main__title {
   margin-bottom: 40px;
   font-size: 35px;
+  opacity: 0;
 }
 
 .main__list {
@@ -84,6 +86,7 @@ li {
   min-height: 400px;
   width: calc((100% - (var(--elements) - 1) * var(--gap)) / (var(--elements)));
   background-color: #ec2c68;
+  opacity: 0;
 }
 
 @media (max-width: 1024px) {
