--- a/style/style.css
+++ b/style/style.css
@@ -91,8 +91,13 @@ li {
   display: flex;
   width:  100%;
   flex-direction: column;
+  transition: transform 0.5s ease-in-out;
 }
 
+.main__link:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out;
+}
 
 .main__img {
   object-fit: cover;
