--- a/style/style.css
+++ b/style/style.css
@@ -83,26 +83,31 @@ li {
 
 .main__item {
   width: calc((100% - (var(--elements) - 1) * var(--gap)) / (var(--elements)));
+  min-height: 260px;
   text-align: center;
   opacity: 0;
 }
 
-.main__link{
+.main__link {
   display: flex;
   width:  100%;
   flex-direction: column;
+  justify-content: flex-end;
   transition: transform 0.5s ease-in-out;
 }
+
 
 .main__link:hover {
   transform: scale(1.1);
   transition: transform 0.5s ease-in-out;
 }
 
+
 .main__img {
   object-fit: cover;
   width: 100%;
-  min-height: 200px;
+  margin-bottom: var(--gap);
+  min-height: 210px;
 }
 
 .main__dscr {
