--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,7 @@ li {
 .main__link {
   display: flex;
   width:  100%;
+  min-height: 260px;
   flex-direction: column;
   justify-content: flex-end;
   transition: transform 0.5s ease-in-out;
@@ -106,7 +107,7 @@ li {
 .main__img {
   object-fit: cover;
   width: 100%;
-  margin-bottom: var(--gap);
+  margin-bottom: auto;
   min-height: 210px;
 }
 
