--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,19 @@
+@font-face {
+	font-family: 'Gilroy';
+	src: url('../fonts/TTFirsNeue-Regular.woff2') format('woff2');
+	font-display: swap;
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gilroy';
+  src: url('../fonts/TTFirsNeue-Bold.woff2') format('woff2');
+	font-display: swap;
+	font-weight: 700;
+	font-style: normal;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +22,7 @@ body {
   margin: 0;
   padding: 0;
   color: #FFF;
-  font-family: Arial;
+  font-family: 'Gilroy', sans-serif;
 }
 
 
